--- a/ScreenSaver/ScreenSaver/ScreenSaver.csproj
+++ b/ScreenSaver/ScreenSaver/ScreenSaver.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IScreenSaverConfiguration.cs" />
     <Compile Include="ScreenSaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenSaverTranslation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
