Debugging ci build file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ before_script:
     - apt-get -qq update
     - apt-get -yqq install git
     - apt-get -yqq install wget
+    - apt-get -yqq install tree
     - wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
     - mono nuget.exe restore -NonInteractive
 
