Fixing ci build

--- a/NuGet.config
+++ b/NuGet.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <config>
-    <add key="repositoryPath" value="Build\Packages" />
+    <add key="repositoryPath" value="Build/Packages" />
   </config>
 
   <packageRestore>
@@ -11,7 +11,7 @@
 
   <packageSources>
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="Tyr Repository" value="Tyr\NuGet" />
+    <add key="Tyr Repository" value="Tyr/NuGet" />
   </packageSources>
 
 </configuration>
