--- a/ScreenSaver/ScreenSaver.Test/packages.config
+++ b/ScreenSaver/ScreenSaver.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ILMerge" version="2.14.1208" targetFramework="net45" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net45" developmentDependency="true" />
 </packages>
