Adding empty configuration class

--- a/ScreenSaver/ScreenSaver/ScreenSaver.csproj
+++ b/ScreenSaver/ScreenSaver/ScreenSaver.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>ConfigurationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IO\Configuration.cs" />
     <Compile Include="IScreenSaverConfiguration.cs" />
     <Compile Include="Media\NativeMethods.cs" />
     <Compile Include="Media\VideoPlayer.cs" />
