--- a/ScreenSaver/ScreenSaver/ScreenSaver.csproj
+++ b/ScreenSaver/ScreenSaver/ScreenSaver.csproj
@@ -62,6 +62,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IO\Configuration.cs" />
     <Compile Include="IScreenSaverConfiguration.cs" />
+    <Compile Include="Media\ISlideShowConfiguration.cs" />
     <Compile Include="Media\NativeMethods.cs" />
     <Compile Include="Media\SlideShowItem.cs" />
     <Compile Include="Media\VideoPlayer.cs" />
