--- a/ScreenSaver/ScreenSaver/ScreenSaver.csproj
+++ b/ScreenSaver/ScreenSaver/ScreenSaver.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IScreenSaverConfiguration.cs" />
     <Compile Include="Media\ISlideShowConfiguration.cs" />
     <Compile Include="Media\NativeMethods.cs" />
+    <Compile Include="Media\SlideShow.cs" />
     <Compile Include="Media\SlideShowItem.cs" />
     <Compile Include="Media\VideoPlayer.cs" />
     <Compile Include="NativeMethods.cs" />
