--- a/ScreenSaver/ScreenSaver/ScreenSaver.csproj
+++ b/ScreenSaver/ScreenSaver/ScreenSaver.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Media\ImageEventArgs.cs" />
     <Compile Include="Media\ISlideShowConfiguration.cs" />
     <Compile Include="Media\NativeMethods.cs" />
+    <Compile Include="Media\RenderingErrorEventArgs.cs" />
     <Compile Include="Media\SlideShow.cs" />
     <Compile Include="Media\SlideShowItem.cs" />
     <Compile Include="Media\VideoPlayer.cs" />
