Implementing slide show test

--- a/ScreenSaver/ScreenSaver.Test/ScreenSaver.Test.csproj
+++ b/ScreenSaver/ScreenSaver.Test/ScreenSaver.Test.csproj
@@ -70,6 +70,7 @@
     <Compile Include="SlideShowControl.Designer.cs">
       <DependentUpon>SlideShowControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="SlideShowTestConfiguration.cs" />
     <Compile Include="VideoControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
